<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="MapKey">AIzaSyBn4ccjMCDjXfa_4xhxTWjbghSj1_LJn9U</string>
    <string name="SenderId">707148396695</string>
    <string name="about_us"><b>Click &amp; pay</b>" make payments easier, faster and more rewarding today. To pay, just scan the QR code at the merchant, enter the bill amount and pay! That's it, you're done. We also help you to make payment in a smart way by providing best local offers and deals in your city."</string>
    <string name="access_code">AVQB65DE20AS17BQSA</string>
    <!--<string name="access_code">AVXD65DD07CJ49DXJC</string>-->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_cash">Add Cash</string>
    <string name="add_money">Add Money</string>
    <string name="alerts">Alerts</string>
    <string name="app_name">Click&amp;Pay</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel_button">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="conf_password">Re-enter New Password</string>
    <string name="confpasscode">Re-enter New Passcode</string>
    <string name="cont">Continue</string>
    <string name="countdown_msg">"Sit back &amp; Relax! 
 while we verify your mobile number"</string>
    <string name="countdown_title">Auto Entering OTP</string>
    <string name="dob">Date of Birth</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="email_invoice_msg">Please enter an Email ID. Your invoice details will be sent to that Email ID</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="formats">Formats</string>
    <string name="getotp">Send Confirmation Code</string>
    <string name="hi">Hi</string>
    <string name="insuff_msg">Please add more money in your Click&amp;Pay wallet to make fast, simple and secure payments anywhere in just 0.3 seconds.</string>
    <string name="insuff_title">Insufficient Money</string>
    <string name="login_reg_tom">By logging in you agree to <b><u>app terms &amp; services</u></b>,</string>
    <string name="merchant_id">92446</string>
    <string name="mm">MM</string>
    <string name="mobilenooremail">Phone/Email address</string>
    <string name="nav_item_maps">Near by</string>
    <string name="nav_item_notifications">Notifications</string>
    <string name="nav_item_offers">Offers</string>
    <string name="nav_item_searchr">Search</string>
    <string name="nav_item_wallet">Wallet</string>
    <string name="newpasscode">Enter New Passcode</string>
    <string name="newpassword">Enter New Password</string>
    <string name="no_messages">No messages</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_transac">No Transaction History</string>
    <string name="offers_comingsoon">"Exciting new offers are coming your way! 
 Meanwhile checkout awesome merchants 
 around you to make paying easy."</string>
    <string name="ok_button">OK</string>
    <string name="otp">Enter code</string>
    <string name="pop_banks">Popular Banks</string>
    <string name="privacy">Privacy Policy</string>
    <string name="reg_tom"><b><u>privacy and content policy</u></b></string>
    <string name="reset_msg">"Enter your email address or mobile number and we'll send you a confirmation code"</string>
    <string name="rupee_symbol">u20B9</string>
    <string name="scanner_activity">Click&amp;Pay</string>
    <string name="search_text">U+1F50E Search</string>
    <string name="select_camera">Select a Camera</string>
    <string name="send_txt">Send</string>
    <string name="support">Support</string>
    <string name="support_side_OffersndealsIssues">Offers &amp; deals Issues</string>
    <string name="support_side_SecuritynPrivacy">Security &amp; Privacy</string>
    <string name="support_side_account_issues">Account Issues</string>
    <string name="support_side_clicknpaywalletissue">Click &amp; Pay Wallet Issues</string>
    <string name="support_side_others">Other</string>
    <string name="support_side_payment_issue">Payments Issues</string>
    <string name="support_side_pick_another_transaction">Pick Another Transaction</string>
    <string name="support_side_title">Get Help on your latest transaction</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_add_money">AddMoneyActivity</string>
    <string name="title_activity_change_pass_word_or_pass_code">ChangePassWordOrPassCode</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_experience">ExperienceActivity</string>
    <string name="title_activity_extra_settings">ExtraSettingsActivity</string>
    <string name="title_activity_help_us_to_improve">HelpUsToImproveActivity</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map_stores">MapStoresActivity</string>
    <string name="title_activity_pass_code">PassCodeActivity</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="title_activity_payment_process">Secure Payment</string>
    <string name="title_activity_payment_success">PaymentSuccessActivity</string>
    <string name="title_activity_profile_settings">ProfileSettings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_saved_cards">SavedCardsActivity</string>
    <string name="title_activity_suggest_astire">SuggestAStireActivity</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="title_activity_tell_us_about_it">TellUsAboutItActivity</string>
    <string name="title_activity_transactions">TransactionsActivity</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="title_cardno">Card Number</string>
    <string name="title_enter_details">Enter Card Details</string>
    <string name="title_save_card">Save Card</string>
    <string name="toggle_flash">Flash</string>
    <string name="tom">Terms of Service</string>
    <string name="turn_off_flashlight">Turn OFF</string>
    <string name="turn_on_flashlight">Turn ON</string>
    <string name="view_merchants">View merchants</string>
    <string name="yyyy">YYYY</string>
    <string name="signin">Sign In</string>
    <string name="transacid">Transaction ID: </string>
</resources>
