<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/walkthrough_screen_1_android" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.soffice.clickandpay.UI.RobotoLightTextView android:textColor="@android:color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/about_us" android:lineSpacingExtra="2.0dip" />
    <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <com.soffice.clickandpay.UI.RobotoRegularTextView android:textColor="@android:color/white" android:gravity="center" android:background="@drawable/red_circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" />
        <com.soffice.clickandpay.UI.RobotoRegularTextView android:textColor="@color/text_color" android:id="@+id/tomtv" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:text="@string/tom" />
        <com.soffice.clickandpay.UI.RobotoRegularTextView android:textColor="@android:color/white" android:gravity="center" android:background="@drawable/red_circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="2" />
        <com.soffice.clickandpay.UI.RobotoRegularTextView android:textColor="@color/text_color" android:layout_gravity="center_vertical" android:id="@+id/privacytv" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:text="@string/privacy" />
    </LinearLayout>
</FrameLayout>