<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    app:cardCornerRadius="3dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@android:color/white">
        <com.soffice.clickandpay.UI.RobotoMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insuff_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textStyle="bold"/>

        <com.soffice.clickandpay.UI.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insuff_msg"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/popup_image"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_add_money_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_money"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="0dp"
            android:textAllCaps="false"/>

    </LinearLayout>
</android.support.v7.widget.CardView>