<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/backLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_IV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_back" />

        <com.soffice.clickandpay.UI.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="Transactions"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transactions_recycler"
        android:layout_width="match_parent"
        android:background="#F2F2F2"
        android:layout_margin="10dp"
        android:layout_below="@+id/backLayout"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>


    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/no_transac_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textStyle="bold"
            android:textColor="#737373"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"/>
        <com.soffice.clickandpay.UI.RobotoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#737373"
            android:text="@string/no_transac"/>
    </LinearLayout>

</RelativeLayout>
