<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.soffice.clickandpay.UI.RobotoBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:text="@string/title_enter_details"
        android:textColor="@android:color/black"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/paybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="PAY"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="3dp"
        app:cardBackgroundColor="@color/card_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cards"
                android:layout_gravity="top|right"
                android:layout_margin="5dp"/>
               <com.soffice.clickandpay.UI.RobotoMediumEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedcorners_white"
                    android:hint="@string/title_cardno"
                    android:padding="8dp"
                   android:layout_margin="5dp"
                   android:inputType="numberSigned"
                   android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:weightSum="4"
                    android:gravity="center_vertical">

                    <com.soffice.clickandpay.UI.RobotoMediumEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundedcorners_white"
                        android:hint="@string/mm"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:inputType="numberSigned"
                        android:textColor="@android:color/black"/>

                    <com.soffice.clickandpay.UI.RobotoMediumEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundedcorners_white"
                        android:hint="@string/yyyy"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:inputType="numberSigned"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundedcorners_white"
                        android:orientation="horizontal"
                        android:inputType="numberSigned"
                        android:weightSum="3">
                        <com.soffice.clickandpay.UI.RobotoMediumEditText
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:maxLength="3"
                            android:textColor="@color/lightBlack"
                            android:textSize="14sp"
                            android:background="@android:color/transparent"
                            android:inputType="numberPassword"
                            android:hint="CVV"
                            android:layout_marginRight="3dp"
                            android:layout_gravity="center_vertical"
                            />
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cvv"
                            android:layout_gravity="center_vertical|right"/>
                    </LinearLayout>
                </LinearLayout>
            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                app:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/title_save_card"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>