<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mycoordinator"
    android:background="@color/transparent_black">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            android:id="@+id/resetlayout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="0dp"
            android:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent">

                    <com.soffice.clickandpay.UI.RobotoBoldTextView
                        android:id="@+id/Label_Title_Dialog_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:background="@color/darker_gray"
                        android:textColor="@android:color/black"/>

                    <com.soffice.clickandpay.UI.RobotoRegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/reset_msg"
                        android:textColor="@android:color/black"/>

                    <com.soffice.clickandpay.UI.RobotoRegularEditText
                        android:id="@+id/reset_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColorHint="#80000000"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:textColor="@color/lightBlack"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:textCursorDrawable="@drawable/red_cursor"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/mobilenooremail"
                        android:background="@drawable/roundedcorners_white"
                        />

                    <com.soffice.clickandpay.UI.RobotoRegularEditText
                        android:id="@+id/reset_dob"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:singleLine="true"
                        android:textColorHint="#80000000"
                        android:textColor="@color/lightBlack"
                        android:textCursorDrawable="@drawable/red_cursor"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:visibility="gone"
                        android:hint="@string/dob"
                        android:background="@drawable/roundedcorners_white"
                        />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/otpbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:textAllCaps="false"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        android:text="@string/getotp"
                        android:visibility="visible"/>
                </LinearLayout>
        </android.support.v7.widget.CardView>


        <com.soffice.clickandpay.UI.RobotoLightTextView
            android:id="@+id/justremeberedtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/resetlayout_one"/>

        <android.support.v7.widget.CardView
            android:id="@+id/resetlayout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="0dp"
            android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/transparent">

                    <com.soffice.clickandpay.UI.RobotoBoldTextView
                        android:id="@+id/Label_Title_Dialog_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:background="@color/darker_gray"
                        android:textColor="@android:color/black"/>


                <com.soffice.clickandpay.UI.RobotoRegularEditText
                    android:id="@+id/reset_newpass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:textColorHint="#80000000"
                    android:textCursorDrawable="@drawable/red_cursor"
                    android:textColor="@color/lightBlack"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:padding="5dp"
                    android:hint="@string/newpassword"
                    android:layout_below="@+id/reset_otp"
                    android:background="@drawable/roundedcorners_white"
                    />

                <com.soffice.clickandpay.UI.RobotoRegularEditText
                    android:id="@+id/reset_conf_pass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/red_cursor"
                    android:textColor="@color/lightBlack"
                    android:textColorHint="#80000000"
                    android:textSize="14sp"
                    android:gravity="left|center_vertical"
                    android:padding="5dp"
                    android:hint="@string/confpasscode"
                    android:background="@drawable/roundedcorners_white"
                    />

                    <com.soffice.clickandpay.UI.RobotoRegularEditText
                        android:id="@+id/reset_otp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:textColorHint="#80000000"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:textColor="@color/lightBlack"
                        android:textCursorDrawable="@drawable/red_cursor"
                        android:textSize="14sp"
                        android:gravity="left|center_vertical"
                        android:padding="5dp"
                        android:inputType="number"
                        android:hint="@string/otp"
                        android:background="@drawable/roundedcorners_white"
                        />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/cancelBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_below="@id/reset_conf_pass"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="-3dp"
                        android:textAllCaps="false"
                        android:text="@string/cancel_button"
                        android:textColor="@android:color/white"
                        android:visibility="visible"/>
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/resetBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_below="@id/reset_conf_pass"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:layout_marginLeft="-3dp"
                            android:visibility="visible"/>
                </LinearLayout>
                </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>